pdf page : fix text alignement

--- a/src/scss/_specifics.scss
+++ b/src/scss/_specifics.scss
@@ -239,13 +239,14 @@ img.alignnone {
  * henri *
  *********/
 
-.ai-pdf {
+#ai-pdf {
   height:90%;
   display: block;
   text-align: left;
   & > * {
     text-align: left;
     display: block;
+    float: none;
   }
   div {
     margin-bottom: 1em;
@@ -256,7 +257,7 @@ img.alignnone {
     font-size:1em;
   }
 }
-.ai-pdf--apercu {
+#ai-pdf--apercu {
   text-align: center;
   img {
     margin: 0.5em;
